# lunalink

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  Taskfile.yml  pyproject.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  coverage-cpp.yml  docs-check.yml  docs-pages.yml  lint.yml  sanitize.yml  test-cpp.yml  test-python.yml  tidy.yml
cpp/: example.cpp  example_core.cpp
cpp/bindings/: afs_module.cpp
cpp/include/: example.hpp
cpp/include/lunalink/signal/: bch.hpp  frame.hpp  iq_mux.hpp  ldpc.hpp  ldpc_tables.hpp  matched_code.hpp  modulator.hpp  prn.hpp  prn_table.hpp  prn_table_weil10230.hpp  prn_table_weil1500.hpp  safety.hpp  tiered_code.hpp
cpp/signal/: bch.cpp  bch_table.cpp  frame.cpp  iq_mux.cpp  ldpc.cpp  ldpc_tables.cpp  matched_code.cpp  modulator.cpp  prn.cpp  prn_table.cpp  prn_table_weil10230.cpp  prn_table_weil1500.cpp  tiered_code.cpp
cpp/tests/: test_bch.cpp  test_coverage_booster.cpp  test_coverage_gap.cpp  test_example.cpp  test_frame.cpp  test_iq_mux.cpp  test_ldpc.cpp  test_matched_code.cpp  test_modulator.cpp  test_prn.cpp  test_safety.cpp  test_safety_extended.cpp  test_tiered_code.cpp
demo/: v1_plot.py
docs/: api.rst  conf.py  cpp20_upgrade_benefits.md  developing.rst  evaluation_guide.rst  index.rst  references.rst  roadmap.rst  safety.rst  specs-ambiguities.md  tech_stack.rst  test_vectors.rst  versioning.rst
docs/assurance/: mission_assurance.rst
docs/references/: 003a_lunanet_sf2_ldpc_submatrix_a_ind.csv  003b_lunanet_sf2_ldpc_submatrix_b_ind.csv  003c_lunanet_sf2_ldpc_submatrix_b_inv_ind.csv  003d_lunanet_sf2_ldpc_submatrix_c_ind.csv  003e_lunanet_sf2_ldpc_submatrix_d_ind.csv  003f_lunanet_sf3_ldpc_submatrix_a_ind.csv  003g_lunanet_sf3_ldpc_submatrix_b_ind.csv  003h_lunanet_sf3_ldpc_submatrix_b_inv_ind.csv  003i_lunanet_sf3_ldpc_submatrix_c_ind.csv  003j_lunanet_sf3_ldpc_submatrix_d_ind.csv  004a_lunanet_sf3_ldpc_submatrix_a_mat.csv  004b_lunanet_sf3_ldpc_submatrix_b_inv_mat.csv  004c_lunanet_sf3_ldpc_submatrix_b_mat.csv  004e_lunanet_sf3_ldpc_submatrix_d_mat.csv  004h_lunanet_sf2_ldpc_submatrix_a_mat.csv  004i_lunanet_sf2_ldpc_submatrix_b_inv_mat.csv  004j_lunanet_sf2_ldpc_submatrix_b_mat.csv  ccsds-outreach-and-competition-anouncement.docx  hackathon_delivery_outline.docx  overview.txt
docs/safety/: space_hardening.rst
docs/shaping/: V1-plan.md  frame.md  progress.md  shaping.md  slices.md  spike-C10.md  spike-C12.md  spike-C7.md  test-vector-format.md
docs/signal/: architecture.rst  bch_decoder_design.rst  compliance_matrix.rst  signal_chain.rst  sisicd.rst  spec_findings_report.rst  spec_observations.rst  validation_plan.rst
scripts/: gen_bch_table.py  gen_ldpc_tables.py  gen_prn_table.py
src/lsis_afs/: __init__.py  _example.pyi  example.py
src/lunalink/: __init__.py
src/lunalink/afs/: __init__.py  _afs.pyi  example.py  signal.py
tests/: example_test.py  test_afs.py
