cmake_minimum_required(VERSION 3.15)
project(lunalink_core LANGUAGES CXX)

# --- C++ Standard & Flags ---
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

# Mission-Critical Flags (NASA/ESA/JAXA Compliance)
if(MSVC)
    set(LUNALINK_WARNING_FLAGS /W4 /WX /permissive-)
    # No exceptions/RTTI flags for MSVC would go here if needed
else()
    set(LUNALINK_WARNING_FLAGS
        -Wall -Wextra -Wpedantic -Werror
        -Wconversion -Wsign-conversion
        -Wshadow
        -Wdouble-promotion
        -Wnull-dereference
        -Wundef
        -Wcast-align
        -Wformat=2
        -Wold-style-cast
        -Wimplicit-fallthrough
        -fno-exceptions
        -fno-rtti
        -fno-fast-math
        )
endif()

# --- Core Library ---
add_library(lunalink_core
    cpp/signal/prn_table.cpp
    cpp/signal/prn_table_weil10230.cpp
    cpp/signal/prn_table_weil1500.cpp
    cpp/signal/prn.cpp
    cpp/signal/modulator.cpp
    cpp/signal/matched_code.cpp
    cpp/signal/iq_mux.cpp
    cpp/signal/bch.cpp
    cpp/signal/bch_table.cpp
    cpp/signal/frame.cpp
)
target_include_directories(lunalink_core PUBLIC cpp/include)
set_target_properties(lunalink_core PROPERTIES POSITION_INDEPENDENT_CODE ON)
target_compile_options(lunalink_core PRIVATE ${LUNALINK_WARNING_FLAGS})

# --- Python Bindings ---
if(BUILD_PYTHON_BINDINGS)
    find_package(Python 3.8 COMPONENTS Interpreter Development.Module REQUIRED)
    find_package(pybind11 CONFIG REQUIRED)

    python_add_library(_afs MODULE cpp/bindings/afs_module.cpp)
    target_link_libraries(_afs PRIVATE lunalink_core pybind11::module)
    target_compile_options(_afs PRIVATE ${LUNALINK_WARNING_FLAGS})
    set_target_properties(_afs PROPERTIES CXX_VISIBILITY_PRESET "hidden")
endif()

# --- Unit Tests ---
if(BUILD_TESTING)
    include(FetchContent)
    FetchContent_Declare(
      Catch2
      GIT_REPOSITORY https://github.com/catchorg/Catch2.git
      GIT_TAG        v3.4.0
    )
    FetchContent_MakeAvailable(Catch2)

    enable_testing()
    # find_package(Catch2 3 REQUIRED) # Replaced by FetchContent

    add_executable(test_lunalink
        cpp/tests/test_prn.cpp
        cpp/tests/test_modulator.cpp
        cpp/tests/test_matched_code.cpp
        cpp/tests/test_iq_mux.cpp
        cpp/tests/test_bch.cpp
        cpp/tests/test_frame.cpp
        cpp/tests/test_coverage_gap.cpp
        )

    target_link_libraries(test_lunalink PRIVATE lunalink_core Catch2::Catch2WithMain)
    target_compile_options(test_lunalink PRIVATE ${LUNALINK_WARNING_FLAGS})

    include(Catch OPTIONAL RESULT_VARIABLE CATCH_MODULE_FOUND)
    if(CATCH_MODULE_FOUND)
        catch_discover_tests(test_lunalink)
    else()
        message(WARNING "Catch2 CMake module not found. CTest integration disabled.")
    endif()
endif()

# --- Coverage Analysis ---
if(ENABLE_COVERAGE AND CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
    target_compile_options(lunalink_core PRIVATE --coverage)
    target_link_options(lunalink_core PRIVATE --coverage)
    
    target_compile_options(test_lunalink PRIVATE --coverage)
    target_link_options(test_lunalink PRIVATE --coverage)
endif()

# --- Sanitizers ---
if(ENABLE_SANITIZERS AND CMAKE_CXX_COMPILER_ID MATCHES "Clang|GNU")
    set(SANITIZE_FLAGS "-fsanitize=address,undefined -fno-omit-frame-pointer")
    target_compile_options(lunalink_core PRIVATE ${SANITIZE_FLAGS})
    target_link_options(lunalink_core PRIVATE ${SANITIZE_FLAGS})
    
    target_compile_options(test_lunalink PRIVATE ${SANITIZE_FLAGS})
    target_link_options(test_lunalink PRIVATE ${SANITIZE_FLAGS})
endif()
