[build-system]
requires = ["scikit-build-core>=0.9", "pybind11>=2.13", "setuptools-scm"]
build-backend = "scikit_build_core.build"

[project]
name = "lsis-afs"
dynamic = ["version"]
description = "LSIS AFS"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "LSIS"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "radon>=6.0",
    "ruff>=0.9",
    "sphinx>=7.0",
    "furo>=2024.1.29",
    "sphinx-autobuild>=2024.0.0",
    "ty==0.0.20",
]

[tool.setuptools_scm]
fallback_version = "0.0.0.dev0"

[tool.scikit-build]
minimum-version = "0.9"
wheel.packages = ["src/lsis_afs"]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=lsis_afs --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
source = ["lsis_afs"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["docs/conf.py"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "C90", # mccabe complexity
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
python-version = "3.12"
