[build-system]
requires = ["scikit-build-core>=0.9", "pybind11>=2.13", "setuptools-scm"]
build-backend = "scikit_build_core.build"

[project]
name = "lunalink"
dynamic = ["version"]
description = "LunaLink — AFS reference implementation for lunar navigation"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [{name = "LunaLink"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
]
dependencies = []

[dependency-groups]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
dev = [
    {include-group = "test"},
    "radon>=6.0",
    "ruff>=0.9",
    "sphinx>=7.0",
    "furo>=2024.1.29",
    "sphinx-autobuild>=2024.0.0",
    "pyright>=1.1",
    "gcovr>=7.0",
]

[tool.setuptools_scm]
fallback_version = "0.0.0.dev0"

[tool.scikit-build]
minimum-version = "0.9"
wheel.packages = ["src/lunalink"]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
ninja.make-fallback = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=lunalink --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
source = ["lunalink"]
branch = true

[tool.coverage.report]
show_missing = true

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["docs/conf.py"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "C90", # mccabe complexity
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
reportMissingModuleSource = "none"
